# modern-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conanfile.txt  docker-compose.yml  entrypoint.sh
include/: BaseComponent.hpp
src/: main.cpp
src/components/: BaseComponent.cpp
